@@ -175,6 +175,10 @@ For more details, see the NEWS file and for complete details, see the git log.
 32.	The .sh.level variable is now read-only except inside a DEBUG trap.
 	The current level/scope is now restored when the DEBUG trap run ends.
 
+33.	The -e option of test/[/[[ no longer returns true for pseudodevices
+	that are only supported by the shell and do not in fact exist in the
+	file system, such as /dev/tcp/*.
+
 ____________________________________________________________________________
 
 		KSH-93 VS. KSH-88
