@@ -7,6 +7,10 @@ Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 - Fixed BUG_BRACQUOT: single and double shell quotes did not work to escape
   the !, ^ or - operators in a bracket expression within a glob pattern.
 
+- The -e option of test/[/[[ no longer returns true for pseudodevices that are
+  only supported by the shell and do not in fact exist in the file system, such
+  as /dev/tcp/*. This reverts a change made in ksh 93u- on 2010-08-24.
+
 2022-09-28:
 
 - Fixed a bug where LINENO was reset to 1 after being temporarily changed in
